kubernetes/pihole/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pihole
  labels:
    app:  pihole
spec:
  selector:
    matchLabels:
      app: pihole
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pihole
    spec:
      containers:
      - name:  pihole
        image:  pihole/pihole
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  http
        - containerPort:  53
          name:  dns-tcp
          protocol:  TCP
        - containerPort:  53
          name:  dns-udp
          protocol:  UDP
        - containerPort:  67
          name:  dhcp
          protocol:  UDP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        imagePullPolicy: IfNotPresent
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: dnsmasq
      restartPolicy: Always
